# petrified-logs

./: .gitignore  README.md  pyproject.toml  runner.py  test_petrified.py
petrified/: _logger.py  color_codes.py  conf.yaml  config.py  emojis.py  errors.py  templates.py
src/petrified/: __init__.py  _logger.py  config.py  styles.py
tests/: test_logger.py  test_logging.py
