[tool.poetry]
name = "petrified"
version = "0.1.0"
description = "Simple colored logging in Python"
authors = ["Junyi <47441677+immanuelhume@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
